'headless: true' issue fixed

--- a/client/src/components/AdWrapper/AdWrapper.css
+++ b/client/src/components/AdWrapper/AdWrapper.css
@@ -37,6 +37,7 @@
 	height: 540px;
 	overflow: auto;
 	scrollbar-gutter: stable;
+	/* background-color: var(--dark); */
 	background-color: var(--dark);
 	padding-block: 10px;
 }
