--- a/client/src/_variables.css
+++ b/client/src/_variables.css
@@ -1,10 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
+
 :root {
 	/* Font */
-	--font: "Roboto", sans-serif;
+	--font: "Rubik", sans-serif;
 	--white: #fff;
 	--icy: #f0ebd8;
-	--light: #3e5c76;
-	--mid: #001d3d;
-	--dark: #0d1321;
+	--light: #ffffff87;
+	--mid: #363636;
+	--mid2: #979797;
+	--dark: #121212;
+	--dark2: #1d1d1d;
 }
